Corrected a typo error as found out casually

--- a/network_modeling/renewalProc.tex
+++ b/network_modeling/renewalProc.tex
@@ -520,7 +520,7 @@ So we have proved that:
 
 \subsection{Cumulative and related renewal process}
 We associate to every random varriable $X_i$ a second random variable $Y_i$. So $Y_i$ and $X_i$ are dependent but $(X_i,Y_i)$ and $(X_j,Y_j)$ are independent. We call F the distribution function of $X_i$, G the distribution function of $Y_i$, $\mu$ the mean of $X_i$ and $\nu$ the mean of $Y_i$.
-\paragraph{Queieng model}
+\paragraph{Queueieng model}
 Suppose to ahve queieng system in which the arrivals follow a Poisson process. $X_i$ represents the the period between two consequent arrivals. $Y_i$ is a portion $X_i$ and represents the period in which the queieng system is busy. We call $p(t)$ the probability that t falls into some portion $Y_i$. We suppone that the first interval has length $X_1=x$ and we obtain what follows.
 \begin{align*}
 	p(t) & =Prob[t \in Y |X_1 = x]=\begin{cases}
