--- a/network_modeling/chapter_PP.tex
+++ b/network_modeling/chapter_PP.tex
@@ -295,11 +295,7 @@ Now we want to define the transition probability $P_{n,n+1}$, and the calculatio
     Q_a(1,n) \cdot [1-Q_r(0,n)] & i=1 \quad \text{1 arrival, no departures}\\\\
     \begin{aligned}
     & Q_a(0,n) \cdot [1-Q_r(1,n)] + \\ & Q_a(1,n)\cdot Q_r(0,n)
-<<<<<<< HEAD
-    \end{aligned}& i=0 \quad \parbox[t]{0.5\textwidth}{no arrivals, 1 departure (successful reTX) or 1 arrival successfully transmitted }\\
-=======
     \end{aligned}& i=0 \quad \parbox[t]{0.6\textwidth}{no arrivals, 1 departure (successful reTX) or 1 arrival successfully transmitted }\\\\
->>>>>>> 846364170ce92b52889217e250188c4ced55bfdb
     Q_a(0,n)\cdot Q_r(1,n) & i = -1 \quad \text{1 departure, no arrivals}\\
     0 & i < -1 \quad \text{no more than one departure}
   \end{cases}
@@ -324,32 +320,23 @@ We found out that the success probability depends on the state, so we would like
 The process can be approximated as a Poisson Process and the description is given by $D_n = (m-n)\cdot q_a - G(n) \cdot e^{-G(n)}$
 with G(n) as given before.
 
-<<<<<<< HEAD
 \begin{figure}
   \input{img/driftAnalisis.tex}
   \caption{Between \textbf{A} and \textbf{B} and for any G(n) bigger than \textbf{G(m)} $D_n <0$. $D_n>0$ in the other regions of the plane}
   \label{fig:drift}
 \end{figure}
-=======
-%------ INSERIRE GRAFICO Dn
->>>>>>> Poisson-Process
+
 
 When $D_n>0$ the system tends to reduce the backlogging, wherease if $D_n<0$ the backlogging
 increases and the system becomes unstable.
 
 We would like to improve the system, such that the probability of the system to become
 unstable, is small and the delay to be as low as possible; to do so we can
-<<<<<<< HEAD
+
 \begin{description}
   \item[increase $q_r$] The delay gets smaller, but the stability get worse
   \item[decrease $q_r$] the delay increases, but the system is more stable
 \end{description}
-=======
-\begin{enumerate}
-  \item [increase $q_r$] The delay gets smaller, but the stability get worse
-  \item [decrease $q_r$] the delay increases, but the system is more stable
-\end{enumerate}
->>>>>>> 846364170ce92b52889217e250188c4ced55bfdb
 
 Considering the limit, when $m \to +\infty$, $q_a \to 0 \implies q_a \approx \frac{\lambda}{m}$
 As $G=\lambda + n \cdot q_r$ we'd like to maximize the throughput and the success probability.
@@ -433,9 +420,9 @@ $D_n \lessgtr 0 $ if $\lambda \lessgtr \frac{g(n) \cdot e^{-g(n)}}{\beta + 1 - e
 We know that instability will occour eventually, but the time for it to happen is really long.
 
 \subsection{Recurrent \gls{mc} behaviour}
-\begin{figure}
+\begin{figure}[h!]
   \input{img/recurr.tex}
-  \caption{}
+  \caption{Suppose a recurrent markov chain like this to study whether there's a recurrency or not}
   \label{}
 \end{figure}
 
