--- a/network_modeling/img/recurr.tex
+++ b/network_modeling/img/recurr.tex
@@ -18,8 +18,8 @@
   \draw[-stealth] (three) -- (zero);
   \draw[-stealth] (two) -- (four);
   \draw[-stealth] (three) -- (four);
-  \draw[dashed] (two.north east) -- (two.north west);
-  \draw[dashed] (two.north west)-- (three.south west);
-  \draw[dashed]  (three.south east) -- (two.north east);
-  \draw[dashed]  (three.south west) -- (three.south east);
+  \draw[dashed] (-0.5,1.5) -- (0.5,1.5);
+  \draw[dashed] (0.5,1.5)-- (0.5,-1.5);
+  \draw[dashed]  (-0.5,-1.5) -- (-0.5,1.5);
+  \draw[dashed]  (0.5,-1.5) -- (-0.5,-1.5);
 \end{tikzpicture}
